Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91783

Gadget object returned from property is not modified

    XMLWordPrintable

Details

    • 1dc4bdbabfed1eb73b563a77810ceb00a8fd6fca (qt/qtdeclarative/dev)

    Description

      Modifications to gadget object returned from property are somehow getting reset. For example:

      var f = s.foo
      f.setValue(3)
      console.log(f.value())
      

      the value is still the initial one even though setValue() is called and the value is changed. When value() is called, the value set in setValue is reset to the original.

      Looks like QML engine reads from 'foo' property each time some function is called and thus overrides the modified object.

      Attachments

        For Gerrit Dashboard: QTBUG-91783
        # Subject Branch Project Status CR V

        Activity

          People

            ulherman Ulf Hermann
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes